# sistemafinanceiroback

./: .coverage  .env  .gitignore  Dockerfile  README.md  coverage_report.txt  psychologist.db  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt
.history/: .gitignore_20260129102536  Dockerfile_20260128154536  Dockerfile_20260128155049  README_20260128143138.md  README_20260128154536.md  README_20260128155049.md  gunicorn.conf_20260128155049.py  render_20260128154536.yaml  render_20260128154738.yaml  render_20260128164940.yaml  render_20260128170755.yaml  requirements_20260128154536.txt  requirements_20260128155049.txt
.history/app/: main_20260128142235.py  main_20260128154242.py  main_20260128154536.py  main_20260128155049.py
.history/docs/: RENDER_DEPLOY_20260128154504.md  RENDER_DEPLOY_20260128154738.md
app/: __init__.py  lambda_handler.py  main.py
app/core/: __init__.py  config.py  exceptions.py  logger.py
app/domain/: __init__.py
app/infra/: __init__.py
app/interfaces/: __init__.py
app/use_cases/: __init__.py
docs/: API_ENDPOINTS.md  AWS_DEPLOY.md  DECISION_DASHBOARD_METRICS.md  FRONTEND_INTEGRATION.md  GUNICORN_SETUP.md  RENDER_DEPLOY.md  RENDER_SETUP_SUMMARY.md  VALIDATION_DASHBOARD_SUMMARY.md  VALIDATION_GET_SESSION_BY_ID.md
scripts/: migrate_add_user_id.py
tests/: conftest.py
tests/api/: __init__.py  conftest.py  test_cors.py  test_dashboard_api.py  test_data_isolation.py  test_financial_api.py  test_health_api.py  test_patients_api.py  test_sessions_api.py  test_validation_checklist.py
tests/fakes/: __init__.py  (+1 more)
(+142 files in other folders)
